[package]
name = "orbit-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.3"
walkdir = "2.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
handlebars = "4.3.7"
regex = "1.9.1"
lazy_static = "1.4.0"
